fix: 重构调整List<T>多级嵌套下的 jsonschema 解析